@@ -1,3 +1,15 @@
+2010-06-10  Anders Carlsson  <andersca@apple.com>
+
+        Fix build.
+
+        * NetscapeCocoaPlugin/NetscapeCocoaPlugin.xcodeproj/project.pbxproj:
+        * NetscapeCocoaPlugin/main.m:
+        (NPP_New):
+        (NPP_NewStream):
+        (NPP_WriteReady):
+        (NPP_Write):
+        (NPP_HandleEvent):
+
 2010-03-02  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Kevin Decker.
